<resources>
    <string name="app_name">Mis Lugares</string>
    <string name="accion_mostrar">Mostrar Lugares</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_acerca_de">Acerca de </string>
    <string name="accion_salir">Salir</string>
    <string name="nombre_lugar">Nombre</string>
    <string name="identificacion_lugar">La Ciudad Encantada</string>
    <string name="tipo_lugar">Turismo</string>
    <string name="notas_lugar">introduce tus notas</string>
    <string name="comentario_lugar">introduce tus comentarios</string>
    <string name="web_lugar">página web</string>
    <string name="url_lugar">url</string>
    <string name="telefono_lugar">teléfono</string>
    <string name="telefono_contacto_lugar">teléfono para contactar</string>
    <string name="direccion_lugar">dirección del lugar</string>
    <string name="direc_lugar">dirección:</string>
    <string name="action_settings">Settings</string>
    <string name="salir_lugar">salir</string>
    <string name="mostrar_main">mostar</string>
    <string name="preferencias_main">preferencias</string>
    <string name="acerca_de_main">acerca de</string>
    <string name="salir_main">salir</string>
    <string name="tituloAplicacion">Mi Aplicación</string>
    <string name ="acerca_de">
        Anoche soñe mi vida\n
        más vivida que soñada\n
        pués fué la despedida\n
        más sentida que imaginada\n
        mi juventud sin amor\n
    </string>
</resources>
