<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentacion.MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/identificacion_lugar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_nombre"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nombre"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
        <Spinner
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/t_tipo"
            app:layout_constraintLeft_toRightOf="@id/t_tipo"/>
        <TextView
            android:id="@+id/t_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direc_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_tipo"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion_lugar"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_direccion"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/t_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/direccion"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/telefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_contacto_lugar"
            android:inputType="phone"
            app:layout_constraintLeft_toRightOf="@id/t_telefono" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/t_telefono"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/t_telefono"/>
        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telefono"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/web_lugar"
            android:inputType="textUri"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_url"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/t_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentario_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notas_lugar"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_comentario"
            android:layout_marginStart="8dp"/>
        <requestFocus/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>